Added Steepest Ascent
Not finished yet. Need to implement multiple simulations and graphing stability.

--- a/Hill_Climbing_Cartpole.ipynb
+++ b/Hill_Climbing_Cartpole.ipynb
@@ -8,10 +8,10 @@
     "\n",
     "---\n",
     "\n",
-    "This notebook will train an Agent to solve the OpenAI Gym [Cartpole]() environment using vanilla hill climbing. This is a\n",
+    "This notebook will train an Agent to solve the OpenAI Gym [Cartpole](https://gym.openai.com/envs/CartPole-v0/) environment using vanilla hill climbing. This is a\n",
     "policy based method used to find the optimal policy. [Here](https://en.wikipedia.org/wiki/Hill_climbing) is an explanation of\n",
     "the hill climbing optimization technique. Based on its simplicity, and the fact it could get stuck in local maximums,\n",
-    "I expect this algorithm to have stability issues. We will test this by running the simulations with different\n",
+    "I expect this algorithm to have stability issues. I will test this by running the simulations with different\n",
     "random seeds and see how the results differ. All results will be saved in the saved_scores directory and can be viewed in\n",
     "the images directory. Also comparisons between agents can be seen by using the comparisons.ipynb."
    ]
@@ -43,7 +43,7 @@
    "source": [
     "### 2. Define the Policy Network\n",
     "The policy network is what we use to transform the state into a policy. For vanilla hill climbing this is a very simple linear\n",
-    "function that is then ran threw a softmax function to generate probabilities. For Vanilla Hill Climbing this policy will\n",
+    "function that is then ran through a softmax function to generate probabilities. For Vanilla Hill Climbing this policy will\n",
     "be deterministic and choose the max probability over all its action probabilities."
    ]
   },
